update v7 (history+multiredir+nocmdline)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "minishell.h": "c",
-        "random": "c"
+        "random": "c",
+        "algorithm": "c"
     }
 }
